[gd_scene load_steps=8 format=2]

[ext_resource path="res://ChooseShip/Ship1.png" type="Texture" id=1]
[ext_resource path="res://TitleScreen/new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://ChooseShip/Ship2.png" type="Texture" id=4]
[ext_resource path="res://Sound/KLOMldNV5Kib.128.ogg" type="AudioStream" id=5]
[ext_resource path="res://ChooseShip/ChooseShip.gd" type="Script" id=6]
[ext_resource path="res://ChooseShip/Ship3.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Pan"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/TextureButton:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -376, -696 ), Vector2( -376, -833.996 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/TextureButton2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 384, 1168 ), Vector2( 384, 1030 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer/TextureButton3:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 588.123, 1168 ), Vector2( 588.123, 1030 ) ]
}

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Pan"
anims/Pan = SubResource( 1 )

[node name="TextureButton" type="TextureButton" parent="AnimationPlayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -376.0
margin_top = -696.0
margin_right = -822.0
margin_bottom = -541.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 271.789, 931.571 )
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="AnimationPlayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 384.0
margin_top = 1168.0
margin_right = -61.0
margin_bottom = 1326.0
rect_rotation = 180.0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="AnimationPlayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 588.123
margin_top = 1168.0
margin_right = 141.123
margin_bottom = 1321.0
rect_rotation = 180.0
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="AnimationPlayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AnimationPlayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 104.0
margin_right = 488.0
margin_bottom = 162.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 8
custom_constants/shadow_as_outline = 0
text = "Steal Ship:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 613.0
margin_bottom = 1035.0
color = Color( 0.94902, 0.415686, 0.384314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="AnimationPlayer/TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="button_up" from="AnimationPlayer/TextureButton2" to="." method="_on_TextureButton2_button_up"]
[connection signal="button_up" from="AnimationPlayer/TextureButton3" to="." method="_on_TextureButton3_button_up"]
